--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,9 @@
     "target": "es5",     
     "module": "commonjs",
     "strict": true,
-    "esModuleInterop": true,
-    "exclude": [
-      "node_modules"
-    ]
-  }
+    "esModuleInterop": true
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
