--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@types/react": "^16.8.25",
     "@types/react-dom": "^16.8.5",
     "css-loader": "^3.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "sass-loader": "^7.1.0",
     "style-loader": "^1.0.0",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.3",
