--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack-dev-server --mode development --config webpack.config.js --content-base dist/",
-    "build": "webpack --config webpack.config.js"
-  },  
+    "build": "webpack --config webpack.config.js",
+    "test": "jest"
+  },
   "dependencies": {
+    "@types/jest": "^24.0.17",
     "@types/react": "^16.8.25",
     "@types/react-dom": "^16.8.5",
     "css-loader": "^3.2.0",
+    "jest": "^24.8.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "sass-loader": "^7.1.0",  
+    "sass-loader": "^7.1.0",
     "style-loader": "^1.0.0",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.3",
