--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^4.0.0",
+    "@testing-library/react": "^8.0.8",
     "@types/jest": "^24.0.17",
     "@types/react": "^16.8.25",
     "@types/react-dom": "^16.8.5",
@@ -22,6 +24,7 @@
     "react-dom": "^16.8.6",
     "sass-loader": "^7.1.0",
     "style-loader": "^1.0.0",
+    "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.3",
     "webpack": "^4.39.1",
